--- a/Timely Goals/Base.lproj/Main.storyboard
+++ b/Timely Goals/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="ViewController" customModule="Timely_Goals" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lpB-6s-O2K">
@@ -47,14 +47,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ei6-fm-ZJ0" userLabel="Buffer">
-                                <rect key="frame" x="0.0" y="64" width="375" height="60"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                 <color key="backgroundColor" red="0.8901960784313725" green="0.91764705882352937" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="8DE-wa-Ap5"/>
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="L6x-cJ-ecA">
-                                <rect key="frame" x="10" y="64" width="355" height="40"/>
+                                <rect key="frame" x="10" y="0.0" width="355" height="40"/>
                                 <color key="backgroundColor" red="0.8901960784313725" green="0.91764705882352937" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="9zC-j1-LJZ"/>
@@ -97,18 +97,18 @@
                                 </cells>
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" delaysContentTouches="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="b0v-XL-Ht0">
-                                <rect key="frame" x="0.0" y="124" width="375" height="543"/>
+                                <rect key="frame" x="0.0" y="60" width="375" height="543"/>
                                 <color key="backgroundColor" red="0.8901960784313725" green="0.91764705882352937" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TaskCell" rowHeight="35" id="1Xo-Pg-TOO" customClass="TaskCell" customModule="Timely_Goals" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="35"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="TaskCell" id="1Xo-Pg-TOO" customClass="TaskCell" customModule="Timely_Goals" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1Xo-Pg-TOO" id="CKc-lF-sWj">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="34.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXT-pt-snq" userLabel="Background">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="35"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmarkwhite" translatesAutoresizingMaskIntoConstraints="NO" id="m46-zu-KCy">
                                                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -121,7 +121,6 @@
                                                     <color key="backgroundColor" red="0.0" green="0.90196078431372551" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstItem="m46-zu-KCy" firstAttribute="leading" secondItem="vXT-pt-snq" secondAttribute="leading" id="3BX-g3-Voi"/>
-                                                        <constraint firstAttribute="height" constant="35" id="QKl-z2-i1u"/>
                                                         <constraint firstAttribute="trailing" secondItem="m46-zu-KCy" secondAttribute="trailing" id="Tcy-h5-21Q"/>
                                                         <constraint firstItem="m46-zu-KCy" firstAttribute="top" secondItem="vXT-pt-snq" secondAttribute="top" id="lCr-UG-piQ"/>
                                                     </constraints>
@@ -132,10 +131,10 @@
                                                     </variation>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="go5-jl-1h4" userLabel="Label Wrapper">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="35"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iho-rj-q3M" userLabel="Button Wrapper">
-                                                            <rect key="frame" x="295" y="8" width="70" height="20"/>
+                                                            <rect key="frame" x="295" y="12" width="70" height="20"/>
                                                             <subviews>
                                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="648-dC-Ykg">
                                                                     <rect key="frame" x="0.0" y="0.0" width="70" height="20"/>
@@ -157,7 +156,7 @@
                                                             </constraints>
                                                         </view>
                                                         <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="New Task" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HaX-zv-bwN">
-                                                            <rect key="frame" x="10" y="8" width="275" height="19"/>
+                                                            <rect key="frame" x="10" y="10" width="275" height="23.5"/>
                                                             <nil key="textColor"/>
                                                             <fontDescription key="fontDescription" name="KannadaSangamMN" family="Kannada Sangam MN" pointSize="14"/>
                                                             <textInputTraits key="textInputTraits"/>
@@ -168,15 +167,17 @@
                                                     <constraints>
                                                         <constraint firstAttribute="leading" secondItem="HaX-zv-bwN" secondAttribute="leading" constant="-10" id="1kG-Tp-C5s"/>
                                                         <constraint firstItem="Iho-rj-q3M" firstAttribute="leading" secondItem="HaX-zv-bwN" secondAttribute="trailing" constant="10" id="3aV-h1-oCW"/>
+                                                        <constraint firstItem="HaX-zv-bwN" firstAttribute="top" secondItem="go5-jl-1h4" secondAttribute="top" constant="10" id="51r-U5-5en"/>
                                                         <constraint firstItem="HaX-zv-bwN" firstAttribute="centerY" secondItem="go5-jl-1h4" secondAttribute="centerY" id="Q9j-lC-3Iw"/>
                                                         <constraint firstItem="Iho-rj-q3M" firstAttribute="trailing" secondItem="go5-jl-1h4" secondAttribute="trailing" constant="-10" id="RGg-0f-aUU"/>
-                                                        <constraint firstAttribute="height" constant="35" id="eWQ-5h-9Nq"/>
+                                                        <constraint firstAttribute="bottom" secondItem="HaX-zv-bwN" secondAttribute="bottom" constant="10" id="q5V-F2-keJ"/>
                                                         <constraint firstItem="Iho-rj-q3M" firstAttribute="centerY" secondItem="go5-jl-1h4" secondAttribute="centerY" id="xKb-yu-fC5"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="go5-jl-1h4" secondAttribute="bottom" id="5hY-5L-Jni"/>
+                                                <constraint firstItem="go5-jl-1h4" firstAttribute="bottom" secondItem="vXT-pt-snq" secondAttribute="bottom" id="8gQ-HX-REi"/>
                                                 <constraint firstAttribute="bottom" secondItem="vXT-pt-snq" secondAttribute="bottom" id="9mU-83-geC"/>
                                                 <constraint firstItem="vXT-pt-snq" firstAttribute="top" secondItem="CKc-lF-sWj" secondAttribute="top" id="BgC-yL-ykl"/>
                                                 <constraint firstItem="go5-jl-1h4" firstAttribute="width" secondItem="CKc-lF-sWj" secondAttribute="width" id="FjS-YZ-pW9"/>
@@ -216,6 +217,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" title="Daily Goals" id="KOe-dF-LaM" userLabel="Daily Goals">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="DQS-so-UAw">
                             <connections>
